# rust-garage-discovery

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  garage.toml  setup.sh  verify.sh
.github/workflows/: ci.yml
receiver/: Cargo.toml
receiver/src/: data_writer.rs  data_writer_tests.rs  main.rs
sender/: Cargo.toml
sender/src/: circuit_breaker.rs  concurrency_tests.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: integration_concurrency_tests.rs
